cbits/skia_capi/skparagraph.h

SK_C_PLUS_PLUS_BEGIN_GUARD

// TextStyle

SK_C_API skparagraph_text_style_t *skparagraph_text_style_new(void);
SK_C_API void skparagraph_text_style_delete(skparagraph_text_style_t *style);
SK_C_API void skparagraph_text_style_set_color(
    skparagraph_text_style_t *style, sk_color_t color
);
SK_C_API void skparagraph_text_style_set_foreground_paint(
    skparagraph_text_style_t *style, sk_paint_t *paint
);
SK_C_API void skparagraph_text_style_clear_foreground_paint(
    skparagraph_text_style_t *style
);
SK_C_API void skparagraph_text_style_set_background_paint(
    skparagraph_text_style_t *style, sk_paint_t *paint
);
SK_C_API void skparagraph_text_style_clear_background_paint(
    skparagraph_text_style_t *style
);
SK_C_API void skparagraph_text_style_set_decoration(
    skparagraph_text_style_t *style,
    skparagraph_text_decoration_flags_t decoration
);
SK_C_API void skparagraph_text_style_set_decoration_mode(
    skparagraph_text_style_t *style, skparagraph_text_decoration_mode_t mode
);
SK_C_API void skparagraph_text_style_set_decoration_style(
    skparagraph_text_style_t *style, skparagraph_text_decoration_style_t st
);
SK_C_API void skparagraph_text_style_set_decoration_color(
    skparagraph_text_style_t *style, sk_color_t color
);
SK_C_API void skparagraph_text_style_set_decoration_thickness_multipler(
    skparagraph_text_style_t *style, sk_scalar_t m
);
SK_C_API void skparagraph_text_style_set_font_style(
    skparagraph_text_style_t *style, sk_fontstyle_t *fontStyle
);
SK_C_API void skparagraph_text_style_add_shadow(
    skparagraph_text_style_t *style, skparagraph_text_shadow_t *shadow
);
SK_C_API void skparagraph_text_style_reset_shadow(
    skparagraph_text_style_t *style
);
SK_C_API void skparagraph_text_style_add_font_feature(
    skparagraph_text_style_t *style, sk_string_t *fontFeature, int value
);
SK_C_API void skparagraph_text_style_reset_font_features(
    skparagraph_text_style_t *style
);