src/Skia/Bindings/Skparagraph.hs

{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE DeriveFoldable #-}
{-# LANGUAGE DeriveFunctor #-}
{-# LANGUAGE DeriveGeneric #-}
{-# LANGUAGE DeriveTraversable #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE EmptyCase #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
{-# LANGUAGE NamedFieldPuns #-}
{-# LANGUAGE OverloadedLabels #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE OverloadedStrings #-}
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- | This is an auto-generated FFI binding module.
module Skia.Bindings.Skparagraph where

import Foreign
import Foreign.C
import Foreign.Storable
import Foreign.Storable.Offset

import Skia.Bindings.Types


{- | C function signature:

@
skparagraph_text_style_t *skparagraph_text_style_new(void)
@
-}
foreign import ccall "skparagraph_text_style_new" skparagraph_text_style_new ::
  IO (Ptr (Skparagraph_text_style)) -- ^ C return type: @"skparagraph_text_style_t *"@

-- | Function pointer to 'skparagraph_text_style_new'
foreign import ccall "&skparagraph_text_style_new" p'skparagraph_text_style_new ::
  FunPtr (IO (Ptr (Skparagraph_text_style)))

{- | C function signature:

@
void skparagraph_text_style_delete(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_delete" skparagraph_text_style_delete ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_delete'
foreign import ccall "&skparagraph_text_style_delete" p'skparagraph_text_style_delete ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_color(skparagraph_text_style_t *style, sk_color_t color)
@
-}
foreign import ccall "skparagraph_text_style_set_color" skparagraph_text_style_set_color ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_color'
foreign import ccall "&skparagraph_text_style_set_color" p'skparagraph_text_style_set_color ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_color -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_foreground_paint(skparagraph_text_style_t *style, sk_paint_t *paint)
@
-}
foreign import ccall "skparagraph_text_style_set_foreground_paint" skparagraph_text_style_set_foreground_paint ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_paint) -- ^ C argument @"sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_foreground_paint'
foreign import ccall "&skparagraph_text_style_set_foreground_paint" p'skparagraph_text_style_set_foreground_paint ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_clear_foreground_paint(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_clear_foreground_paint" skparagraph_text_style_clear_foreground_paint ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_clear_foreground_paint'
foreign import ccall "&skparagraph_text_style_clear_foreground_paint" p'skparagraph_text_style_clear_foreground_paint ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_background_paint(skparagraph_text_style_t *style, sk_paint_t *paint)
@
-}
foreign import ccall "skparagraph_text_style_set_background_paint" skparagraph_text_style_set_background_paint ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_paint) -- ^ C argument @"sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_background_paint'
foreign import ccall "&skparagraph_text_style_set_background_paint" p'skparagraph_text_style_set_background_paint ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_clear_background_paint(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_clear_background_paint" skparagraph_text_style_clear_background_paint ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_clear_background_paint'
foreign import ccall "&skparagraph_text_style_clear_background_paint" p'skparagraph_text_style_clear_background_paint ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_decoration(skparagraph_text_style_t *style, skparagraph_text_decoration_flags_t decoration)
@
-}
foreign import ccall "skparagraph_text_style_set_decoration" skparagraph_text_style_set_decoration ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Skparagraph_text_decoration_flags -- ^ C argument @"skparagraph_text_decoration_flags_t decoration"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_decoration'
foreign import ccall "&skparagraph_text_style_set_decoration" p'skparagraph_text_style_set_decoration ::
  FunPtr (Ptr (Skparagraph_text_style) -> Skparagraph_text_decoration_flags -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_decoration_mode(skparagraph_text_style_t *style, skparagraph_text_decoration_mode_t mode)
@
-}
foreign import ccall "skparagraph_text_style_set_decoration_mode" skparagraph_text_style_set_decoration_mode ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Skparagraph_text_decoration_mode -- ^ C argument @"skparagraph_text_decoration_mode_t mode"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_decoration_mode'
foreign import ccall "&skparagraph_text_style_set_decoration_mode" p'skparagraph_text_style_set_decoration_mode ::
  FunPtr (Ptr (Skparagraph_text_style) -> Skparagraph_text_decoration_mode -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_decoration_style(skparagraph_text_style_t *style, skparagraph_text_decoration_style_t st)
@
-}
foreign import ccall "skparagraph_text_style_set_decoration_style" skparagraph_text_style_set_decoration_style ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Skparagraph_text_decoration_style -- ^ C argument @"skparagraph_text_decoration_style_t st"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_decoration_style'
foreign import ccall "&skparagraph_text_style_set_decoration_style" p'skparagraph_text_style_set_decoration_style ::
  FunPtr (Ptr (Skparagraph_text_style) -> Skparagraph_text_decoration_style -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_decoration_color(skparagraph_text_style_t *style, sk_color_t color)
@
-}
foreign import ccall "skparagraph_text_style_set_decoration_color" skparagraph_text_style_set_decoration_color ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_decoration_color'
foreign import ccall "&skparagraph_text_style_set_decoration_color" p'skparagraph_text_style_set_decoration_color ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_color -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_decoration_thickness_multipler(skparagraph_text_style_t *style, sk_scalar_t m)
@
-}
foreign import ccall "skparagraph_text_style_set_decoration_thickness_multipler" skparagraph_text_style_set_decoration_thickness_multipler ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t m"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_decoration_thickness_multipler'
foreign import ccall "&skparagraph_text_style_set_decoration_thickness_multipler" p'skparagraph_text_style_set_decoration_thickness_multipler ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_font_style(skparagraph_text_style_t *style, sk_fontstyle_t *fontStyle)
@
-}
foreign import ccall "skparagraph_text_style_set_font_style" skparagraph_text_style_set_font_style ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * fontStyle"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_font_style'
foreign import ccall "&skparagraph_text_style_set_font_style" p'skparagraph_text_style_set_font_style ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_fontstyle) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_add_shadow(skparagraph_text_style_t *style, skparagraph_text_shadow_t *shadow)
@
-}
foreign import ccall "skparagraph_text_style_add_shadow" skparagraph_text_style_add_shadow ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Skparagraph_text_shadow) -- ^ C argument @"skparagraph_text_shadow_t * shadow"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_add_shadow'
foreign import ccall "&skparagraph_text_style_add_shadow" p'skparagraph_text_style_add_shadow ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Skparagraph_text_shadow) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_reset_shadow(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_reset_shadow" skparagraph_text_style_reset_shadow ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_reset_shadow'
foreign import ccall "&skparagraph_text_style_reset_shadow" p'skparagraph_text_style_reset_shadow ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_add_font_feature(skparagraph_text_style_t *style, sk_string_t *fontFeature, int value)
@
-}
foreign import ccall "skparagraph_text_style_add_font_feature" skparagraph_text_style_add_font_feature ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_string) -- ^ C argument @"sk_string_t * fontFeature"@
  -> CInt -- ^ C argument @"int value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_add_font_feature'
foreign import ccall "&skparagraph_text_style_add_font_feature" p'skparagraph_text_style_add_font_feature ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_string) -> CInt -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_reset_font_features(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_reset_font_features" skparagraph_text_style_reset_font_features ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_reset_font_features'
foreign import ccall "&skparagraph_text_style_reset_font_features" p'skparagraph_text_style_reset_font_features ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))
